[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Woodlands_Background.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Woodlands_Floor.png" type="Texture" id=2]
[ext_resource path="res://Assets/Woodlands_Static_FrontWall.png" type="Texture" id=3]
[ext_resource path="res://Assets/Woodlands_Wall 1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Woodlands_Static_Tree.png" type="Texture" id=5]
[ext_resource path="res://Assets/Woodlands_House 1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Wall Thumb 2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Plants Thumb 1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Tree Thumb 1.png" type="Texture" id=9]
[ext_resource path="res://Scripts/HomeUpgrade1.gd" type="Script" id=10]
[ext_resource path="res://Assets/Choose your upgrade_ .png" type="Texture" id=11]
[ext_resource path="res://Assets/Woodlands_Wall 2.png" type="Texture" id=12]
[ext_resource path="res://Scripts/SparkleParticle.gd" type="Script" id=13]
[ext_resource path="res://Assets/Sparkle.png" type="Texture" id=14]
[ext_resource path="res://Assets/Continue-03.png" type="Texture" id=15]

[sub_resource type="Animation" id=19]
resource_name = "Placed"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Wall2FadeIn"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Wall2FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Placed"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Wall1FadeOut"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Chosen"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56, 384 ), Vector2( 56, 384 ), Vector2( 496, 200 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Fade out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.796078 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hearts"
length = 3.0

[sub_resource type="Animation" id=9]
resource_name = "Particles"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Particle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.776471 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 56, 384 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve" id=18]
max_value = 2.0
_data = [ Vector2( 0.00490196, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=3]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.74902 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.74902 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.756863 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer3:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ NodePath("..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.756863 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "ChooseFadeOut"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.752941 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.752941 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="WoodlandsBackground" type="Sprite"]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="WoodlandsFloor" type="Sprite" parent="."]
position = Vector2( 8, -48 )
scale = Vector2( 0.75463, 0.75463 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="WoodlandsWall2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -16, -200 )
scale = Vector2( 0.622222, 0.622222 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall2Animation" type="AnimationPlayer" parent="WoodlandsWall2"]
anims/Placed = SubResource( 19 )
anims/RESET = SubResource( 15 )
anims/Wall2FadeIn = SubResource( 13 )
anims/Wall2FadeOut = SubResource( 14 )

[node name="WoodlandsWall1" type="Sprite" parent="."]
position = Vector2( 8, -40 )
scale = Vector2( 0.725463, 0.725463 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall1Animation" type="AnimationPlayer" parent="WoodlandsWall1"]
anims/Placed = SubResource( 20 )
anims/RESET = SubResource( 17 )
anims/Wall1FadeOut = SubResource( 16 )

[node name="WoodlandsStaticTree2" type="Sprite" parent="."]
position = Vector2( 608, -248 )
scale = Vector2( 0.641696, 0.641696 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="WoodlandsHouse1" type="Sprite" parent="."]
position = Vector2( 280, 56 )
scale = Vector2( 0.250015, 0.250015 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="WoodlandsStaticTree" type="Sprite" parent="."]
position = Vector2( -592, -208 )
scale = Vector2( 0.641696, 0.641696 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="WoodlandsStaticFrontWall" type="Sprite" parent="."]
position = Vector2( 8, 312 )
scale = Vector2( 0.75463, 0.75463 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Upgrade1" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.776471 )
position = Vector2( 56, 384 )
scale = Vector2( 0.657388, 0.657388 )
normal = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Upgrade1"]
anims/Chosen = SubResource( 8 )
"anims/Fade out" = SubResource( 1 )
anims/Hearts = SubResource( 7 )
anims/Particles = SubResource( 9 )
anims/RESET = SubResource( 2 )

[node name="Particle" type="CPUParticles2D" parent="CanvasLayer/Upgrade1"]
position = Vector2( 231.218, 243.388 )
scale = Vector2( 0.21, 0.211 )
emitting = false
one_shot = true
explosiveness = 0.02
texture = ExtResource( 14 )
emission_shape = 2
emission_rect_extents = Vector2( 500, 500 )
gravity = Vector2( 0, 0 )
initial_velocity_random = 0.5
orbit_velocity = 2.09
orbit_velocity_random = 0.69
damping = 50.73
scale_amount_random = 0.63
scale_amount_curve = SubResource( 18 )
script = ExtResource( 13 )

[node name="Upgrade2" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.74902 )
position = Vector2( 488, 384 )
scale = Vector2( 0.657388, 0.657388 )
normal = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CanvasLayer/Upgrade2"]
anims/Fadeout = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Upgrade3" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.756863 )
self_modulate = Color( 1, 1, 1, 0.756863 )
position = Vector2( 904, 384 )
scale = Vector2( 0.657387, 0.657388 )
normal = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer3" type="AnimationPlayer" parent="CanvasLayer/Upgrade3"]
anims/Fadeout = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]

[node name="ChooseYourUpgrade" type="Sprite" parent="CanvasLayer/Sprite"]
modulate = Color( 1, 1, 1, 0.752941 )
position = Vector2( 640, 144 )
scale = Vector2( 0.777778, 0.777778 )
texture = ExtResource( 11 )

[node name="ChooseThumb" type="AnimationPlayer" parent="CanvasLayer/Sprite/ChooseYourUpgrade"]
anims/ChooseFadeOut = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="ContinueButton" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 285.201, 584.333 )
scale = Vector2( 0.639849, 0.639849 )
normal = ExtResource( 15 )

[node name="Continue" type="AnimationPlayer" parent="CanvasLayer/ContinueButton"]
method_call_mode = 1
anims/FadeIn = SubResource( 23 )
anims/FadeOut = SubResource( 24 )
anims/RESET = SubResource( 25 )

[connection signal="animation_changed" from="WoodlandsWall2/Wall2Animation" to="." method="_on_Wall2Animation_animation_changed"]
[connection signal="animation_finished" from="WoodlandsWall2/Wall2Animation" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="WoodlandsWall2/Wall2Animation" to="." method="_on_Wall2Animation_animation_finished" flags=6]
[connection signal="animation_finished" from="WoodlandsWall1/Wall1Animation" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="WoodlandsWall1/Wall1Animation" to="." method="_on_Wall1Animation_animation_finished" binds= [ true ]]
[connection signal="pressed" from="CanvasLayer/Upgrade1" to="." method="_on_Upgrade1_pressed"]
[connection signal="pressed" from="CanvasLayer/Upgrade1" to="CanvasLayer/Upgrade1/Particle" method="_on_Upgrade1_pressed"]
[connection signal="animation_finished" from="CanvasLayer/Upgrade1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="CanvasLayer/Upgrade1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="pressed" from="CanvasLayer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
